<resources>
    <string name="app_name">Superstar MMJ Dispensaries</string>
    <string name="home_tab">Home</string>
    <string name="location_tab">Location</string>
    <string name="products_tab">Products</string>
    <string name="qr_tab">QR</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_maps_fragment">Map</string>
    <string name="clothing_and_apparel_text">Superstar Clothing &amp; Apparel</string>
    <string name="superstar_accs_text">Superstar Vapor Pen Accessories</string>
    <string name="superstar_pen_text">Superstar Vapor Pen</string>
    <string name="superstar_prem_liquid_text">Superstar Premium E-liquid</string>
    <string name="holy_liquid_text">Holy Grail CBD E-liquid</string>
    <string name="web_link_cbd">https://superstarvaporpens.com/product-category/holy-grail-cbd-e-liquid/</string>
    <string name="web_link_eliq">https://superstarvaporpens.com/product-category/superstar-premium-e-liquid/</string>
    <string name="web_link_vppen">https://superstarvaporpens.com/product-category/superstar-vapor-pen/</string>
    <string name="web_link_vppen_accs">https://superstarvaporpens.com/product-category/superstar-vapor-pen-accessories/</string>
    <string name="web_link_clothing">https://superstarvaporpens.com/product-category/superstar-clothing-apperal/</string>
    <string name="qr_fragment_follow_button_text">Follow the Link!</string>
    <string name="qr_fragment_rescan_button_text">Re-Scan</string>
    <string name="map_fragment_close_dialog_button">Close</string>
    <string-array name="map_dialog_action_chooser">
        <item>Go to website</item>
        <item>Write an e-mail</item>
        <item>Call Dispensary</item>
    </string-array>
</resources>
